# chcase

./: .editorconfig  .gitignore  Makefile  README.md  meson.build  meson_options.txt
.github/workflows/: main.yml
docs/: index.html
docs/chcase/: ChCase.Case.CAMEL.html  ChCase.Case.KEBAB.html  ChCase.Case.PASCAL.html  ChCase.Case.SENTENCE.html  ChCase.Case.SNAKE.html  ChCase.Case.SPACE_SEPARATED.html  ChCase.Case.html  ChCase.Case.to_string.html  ChCase.Converter.Converter.html  ChCase.Converter.Converter.with_case.html  ChCase.Converter.Converter.with_case_from_string.html  ChCase.Converter.convert_case.html  ChCase.Converter.get_result_case.html  ChCase.Converter.get_result_case_from_string.html  ChCase.Converter.get_source_case.html  ChCase.Converter.get_source_case_from_string.html  ChCase.Converter.html  ChCase.Converter.result_case.html  ChCase.Converter.result_case_name.html  ChCase.Converter.set_result_case.html  ChCase.Converter.set_result_case_from_string.html  ChCase.Converter.set_source_case.html  ChCase.Converter.set_source_case_from_string.html  ChCase.Converter.source_case.html  ChCase.Converter.source_case_name.html  ChCase.PatternType.Camel.Camel.html  ChCase.PatternType.Camel.html  ChCase.PatternType.Camel.to_camel.html  ChCase.PatternType.Camel.to_kebab.html  ChCase.PatternType.Camel.to_pascal.html  ChCase.PatternType.Camel.to_sentence.html  ChCase.PatternType.Camel.to_snake.html  ChCase.PatternType.Camel.to_space_separated.html  ChCase.PatternType.Kebab.Kebab.html  ChCase.PatternType.Kebab.html  ChCase.PatternType.Kebab.to_camel.html  ChCase.PatternType.Kebab.to_kebab.html  ChCase.PatternType.Kebab.to_pascal.html  ChCase.PatternType.Kebab.to_sentence.html  ChCase.PatternType.Kebab.to_snake.html  (+46 more)
examples/: Application.vala  meson.build
lib/: Case.vala  Converter.vala  meson.build
lib/PatternType/: Pattern.vala
lib/PatternType/Case/: Camel.vala  Kebab.vala  Pascal.vala  Sentence.vala  Snake.vala  SpaceSeparated.vala
lib/RegexPattern/: Camel.vala  Kebab.vala  Pattern.vala  Sentence.vala  SpaceSeparated.vala
lib/RegexPattern/Case/: Pascal.vala  Snake.vala
lib/RegexPattern/Object/: Pattern.vala
tests/: Application.vala  meson.build  test.vala
